Load inline text boxes for focused element.

This allows TalkBack to navigate by word and line when a text box has
focus, even if accessibility focus is elsewhere (like the virtual keyboard).

BUG=603953

Review-Url: https://codereview.chromium.org/1897443002
Cr-Commit-Position: refs/heads/master@{#394936}

Former-commit-id: 5bb13e6c74c867320875d2413b1e0666835e00c4